added support for pinned posts in collections with membership services

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ helpers/__pycache__/
 helpers/__pycache__/
 helpers/__pycache__/collections.cpython-310.pyc
 helpers/__pycache__/collections.cpython-310.pyc
+/.vs
+/env
